Fixed footer menu alignment issues.

--- a/docroot/themes/custom/epa_intranet/assets/scss/global.scss
+++ b/docroot/themes/custom/epa_intranet/assets/scss/global.scss
@@ -1249,3 +1249,47 @@ div.box__title, .box--special > .box__title {
   font-size: 1.06rem;
   color: #1b1b1b;
 }
+
+/* IN-659 Footer text not displaying corectly. */
+.region-footer-menu .grid-row {
+  display: flex;
+  align-items: stretch; /* Default */
+  justify-content: space-between; 
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.region-footer-menu .grid-row li {
+  list-style-type: none;
+  display: block;
+  flex: 0 1 auto;
+}
+.usa-footer__primary-container {
+  width: 100%;
+  max-width: 100%;
+}
+.usa-footer__primary-container.grid-row {
+  display: block;
+}
+.usa-footer__logo .grid-col-auto {
+  display: inline;
+}
+.usa-footer__logo .usa-footer__logo-heading {
+  display: inline;
+}
+
+@media (min-width: 30em) {
+  .region-footer-menu .mobile-lg\:grid-col-8 {
+      flex: 0 1 auto;
+      width: 100%;
+  }
+}
+
+@media (max-width: 571px) {
+  .region-footer-menu .grid-row {
+      flex-direction: column;
+  }
+  .region-footer-menu .grid-row li {
+    width: 100%;
+  }  
+}
